--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,7 +32,7 @@
 		@apply w-5 h-auto;
 	}
 	.card-layout {
-		@apply bg-white round py-6 px-10  leading-10 cursor-pointer drop-shadow-md;
+		@apply bg-white round  p-10  leading-10 cursor-pointer drop-shadow-md;
 	}
 }
 .no-scrollbar::-webkit-scrollbar {
